--- a/Homework5.2_Shushkevych/index.html
+++ b/Homework5.2_Shushkevych/index.html
@@ -19,7 +19,7 @@
     <div class="list">
         <p><label class="container first" rel="external">
                 <input type="checkbox">
-                <span class="checkmark">Колбаса Салями <span><small>давно не ел</span></small></span>
+                <span class="checkmark">Колбаса Салями <span><small>давно не ел</small></span></span>
             </label></p>
         <p><label class="container" rel="internal">
                 <input type="checkbox">
